--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3962,7 +3962,6 @@ payload:
   - '+.513hjs.com'
   - '+.514193.com'
   - '+.514200.com'
-  - '+.51485148.com'
   - '+.51508.com'
   - '+.5151.com'
   - '+.51511.com'
@@ -6156,7 +6155,6 @@ payload:
   - '+.78pan.com'
   - '+.78te.com'
   - '+.78tp.com'
-  - '+.78zph.com'
   - '+.79.com'
   - '+.793360.com'
   - '+.7937.com'
@@ -10588,6 +10586,7 @@ payload:
   - '+.baoshe.net'
   - '+.baoshuanglong.com'
   - '+.baoshuiguoji.com'
+  - '+.baoshuo.ren'
   - '+.baosiair.com'
   - '+.baosight.com'
   - '+.baosteel.com'
@@ -26026,7 +26025,6 @@ payload:
   - '+.gz-cube.com'
   - '+.gz-data.com'
   - '+.gz-gz.com'
-  - '+.gz-hongxin.com'
   - '+.gz-lodihair.com'
   - '+.gz-notary.com'
   - '+.gz-oe.com'
@@ -29431,6 +29429,7 @@ payload:
   - '+.huobanmall.com'
   - '+.huobanxietong.com'
   - '+.huobaoyx.com'
+  - '+.huobi.com.gi'
   - '+.huobi.io'
   - '+.huocai.com'
   - '+.huocc.com'
@@ -31319,7 +31318,6 @@ payload:
   - '+.iotxing.com'
   - '+.iovweek.com'
   - '+.iowiki.com'
-  - '+.ip-china.org'
   - '+.ip-guard.net'
   - '+.ip.fm'
   - '+.ip008.com'
@@ -33189,6 +33187,7 @@ payload:
   - '+.jiqid.com'
   - '+.jiqie.com'
   - '+.jiqike.com'
+  - '+.jiqimao.com'
   - '+.jiqirenku.com'
   - '+.jiqizhixin.com'
   - '+.jirengu.com'
@@ -34347,6 +34346,7 @@ payload:
   - '+.jx-bank.com'
   - '+.jx-nc.com'
   - '+.jx09.com'
+  - '+.jx188.com'
   - '+.jx3mogu.com'
   - '+.jx3pve.com'
   - '+.jx3tong.com'
@@ -43755,6 +43755,7 @@ payload:
   - '+.pc51.com'
   - '+.pc521.net'
   - '+.pc5210.com'
+  - '+.pc6.com'
   - '+.pc6a.com'
   - '+.pc70.com'
   - '+.pc811.com'
@@ -49479,7 +49480,6 @@ payload:
   - '+.shuanlongda.site'
   - '+.shuashuaapp.com'
   - '+.shuazhibo.com'
-  - '+.shubao95.com'
   - '+.shubiaob.com'
   - '+.shubulo.com'
   - '+.shubuzi.com'
@@ -50669,6 +50669,7 @@ payload:
   - '+.sooopu.com'
   - '+.soopat.com'
   - '+.soopay.net'
+  - '+.sooshong.com'
   - '+.sooshu.net'
   - '+.soosmart.com'
   - '+.sootoo.com'
@@ -58827,6 +58828,7 @@ payload:
   - '+.www.dell.com'
   - '+.www.dji.com'
   - '+.www.djivideos.com'
+  - '+.www.epsonconnect.com'
   - '+.www.ericsson.com'
   - '+.www.globalsign.com'
   - '+.www.gov.mo'
