--- a/directbak.yaml
+++ b/directbak.yaml
@@ -89,7 +89,6 @@ payload:
   - '+.010dsmzyy.com'
   - '+.010hetongls.com'
   - '+.010jianzhan.com'
-  - '+.010jing-pc.com'
   - '+.010lf.com'
   - '+.0110m.com'
   - '+.0119.com'
@@ -226,7 +225,6 @@ payload:
   - '+.025kaiyi.com'
   - '+.025nj.com'
   - '+.025sc.com'
-  - '+.025xingshi.net'
   - '+.025xl.com'
   - '+.025zp.com'
   - '+.026idc.com'
@@ -979,7 +977,6 @@ payload:
   - '+.11160066.com'
   - '+.111com.net'
   - '+.111g.com'
-  - '+.111jz.com'
   - '+.111qqz.com'
   - '+.111tt.icu'
   - '+.111yao.com'
@@ -1230,7 +1227,6 @@ payload:
   - '+.126doc.com'
   - '+.126g.com'
   - '+.126qiye.com'
-  - '+.126shu.com'
   - '+.126ts.com'
   - '+.126x.com'
   - '+.126z.net'
@@ -6887,7 +6883,6 @@ payload:
   - '+.9170.com'
   - '+.917118.com'
   - '+.917558.com'
-  - '+.9178.work'
   - '+.917ka.com'
   - '+.917st.com'
   - '+.9188.com'
@@ -8009,8 +8004,6 @@ payload:
   - '+.admpub.com'
   - '+.admqr.com'
   - '+.adnineplus.com'
-  - '+.adnmb1.com'
-  - '+.adnmb2.com'
   - '+.adnyg.com'
   - '+.adobe55.com'
   - '+.adobeae.com'
@@ -8590,7 +8583,6 @@ payload:
   - '+.aiyingshi.com'
   - '+.aiykj.com'
   - '+.aiyou.com'
-  - '+.aiyou.tv'
   - '+.aiyoumi.com'
   - '+.aiyoweia.com'
   - '+.aiyuangong.com'
@@ -8868,6 +8860,7 @@ payload:
   - '+.aliyunhn.com'
   - '+.aliyunj.com'
   - '+.aliyunlive.com'
+  - '+.aliyunoos.com'
   - '+.aliyunpds.com'
   - '+.aliyunqifu.com'
   - '+.aliyuntest0161.xin'
@@ -11501,7 +11494,6 @@ payload:
   - '+.biqudu.net'
   - '+.biqudu.tv'
   - '+.biqufu.com'
-  - '+.biquge.com.tw'
   - '+.biquge.info'
   - '+.biquge.la'
   - '+.biquge.lu'
@@ -11865,7 +11857,6 @@ payload:
   - '+.bjsheng.com'
   - '+.bjshijiyu.com'
   - '+.bjsidao.com'
-  - '+.bjsjcq.com'
   - '+.bjsjob.com'
   - '+.bjsjwl.com'
   - '+.bjsjxtm.com'
@@ -12739,7 +12730,6 @@ payload:
   - '+.byd.com'
   - '+.bydit.com'
   - '+.bydowstar.com'
-  - '+.byecity.com'
   - '+.byete.com'
   - '+.byf.com'
   - '+.byfcw.com'
@@ -14264,8 +14254,6 @@ payload:
   - '+.chaosuduokai.com'
   - '+.chaosw.com'
   - '+.chaov.com'
-  - '+.chaowaihui.com'
-  - '+.chaowaihui.net'
   - '+.chaoxin.com'
   - '+.chaoxing.com'
   - '+.chaoxz.com'
@@ -14644,7 +14632,6 @@ payload:
   - '+.china-moutai.com'
   - '+.china-nengyuan.com'
   - '+.china-nlp.com'
-  - '+.china-nysw.com'
   - '+.china-obgyn.net'
   - '+.china-packcon.com'
   - '+.china-pcba.com'
@@ -14926,7 +14913,6 @@ payload:
   - '+.chinahw.net'
   - '+.chinahydro.com'
   - '+.chinahyyj.com'
-  - '+.chinai.shop'
   - '+.chinaidaa.org'
   - '+.chinaidcnet.net'
   - '+.chinaidns.com'
@@ -18090,7 +18076,6 @@ payload:
   - '+.dadunet.com'
   - '+.daf-rs.com'
   - '+.dafa53.com'
-  - '+.dafa888-0.com'
   - '+.dafaji.com'
   - '+.dafang24.com'
   - '+.dafangya.com'
@@ -19022,7 +19007,6 @@ payload:
   - '+.dgksxx.com'
   - '+.dglpool.com'
   - '+.dgmama.net'
-  - '+.dgmaoken.com'
   - '+.dgmmbb.com'
   - '+.dgn.cc'
   - '+.dgod.net'
@@ -19938,7 +19922,6 @@ payload:
   - '+.dongzhougroup.com'
   - '+.dongzhuoyao.com'
   - '+.donhonet.net'
-  - '+.donkey4u.com'
   - '+.donvv.com'
   - '+.doodoobird.com'
   - '+.doofull.com'
@@ -23788,7 +23771,6 @@ payload:
   - '+.fuzhimao.com'
   - '+.fuzhongvisa.com'
   - '+.fuzhugo.com'
-  - '+.fuzihao.org'
   - '+.fv99.com'
   - '+.fview.com'
   - '+.fvti.com'
@@ -25484,7 +25466,6 @@ payload:
   - '+.gsrecv.com'
   - '+.gssdlv.com'
   - '+.gssfgk.com'
-  - '+.gsstaf.com'
   - '+.gst-china.net'
   - '+.gstarcad.com'
   - '+.gstdt.com'
@@ -26871,7 +26852,6 @@ payload:
   - '+.haoyangmao8.com'
   - '+.haoyao.com'
   - '+.haoychuang.com'
-  - '+.haoyde.com'
   - '+.haoyhq.com'
   - '+.haoyisheng.com'
   - '+.haoyishui.com'
@@ -28633,7 +28613,6 @@ payload:
   - '+.hqhot.com'
   - '+.hqidi.com'
   - '+.hqjy.com'
-  - '+.hqkjfrp.com'
   - '+.hqpcb.com'
   - '+.hqps.com'
   - '+.hqresearch.org'
@@ -29604,7 +29583,6 @@ payload:
   - '+.hwclouds.mobi'
   - '+.hwclouds.net'
   - '+.hwcrazy.com'
-  - '+.hwdef.com'
   - '+.hwehs.com'
   - '+.hweimall.com'
   - '+.hwfcw.com'
@@ -32195,7 +32173,6 @@ payload:
   - '+.jc35.com'
   - '+.jc56.com'
   - '+.jc85.com'
-  - '+.jcbctv.com'
   - '+.jccsoc.com'
   - '+.jccug.com'
   - '+.jcedu.org'
@@ -32849,7 +32826,6 @@ payload:
   - '+.jietuosh.com'
   - '+.jietusoft.com'
   - '+.jiexi.la'
-  - '+.jiexi8.com'
   - '+.jiexiyouxuan.com'
   - '+.jieyou.com'
   - '+.jieyoujob.com'
@@ -34308,7 +34284,6 @@ payload:
   - '+.juyouquan.net'
   - '+.juyoutv.cc'
   - '+.juyouxuan.vip'
-  - '+.juyuancaiyin.com'
   - '+.juzhen.com'
   - '+.juzhen.io'
   - '+.juzhiyuan.com'
@@ -38395,6 +38370,7 @@ payload:
   - '+.lumajia.com'
   - '+.lumanman1688.com'
   - '+.lumi258.com'
+  - '+.lumiai.com'
   - '+.lumiaxu.com'
   - '+.lumit.org'
   - '+.lumiunited.com'
@@ -42157,7 +42133,6 @@ payload:
   - '+.niuche.com'
   - '+.niucodata.com'
   - '+.niudai120.com'
-  - '+.niudingfeng.com'
   - '+.niug8.com'
   - '+.niugame.net'
   - '+.niugp.com'
@@ -42356,6 +42331,7 @@ payload:
   - '+.noahsnail.com'
   - '+.noahteck.com'
   - '+.nobanus.com'
+  - '+.nobmoo.com'
   - '+.nocang.com'
   - '+.nocare.com'
   - '+.noclyt.com'
@@ -42981,6 +42957,7 @@ payload:
   - '+.onaliyun.com'
   - '+.oncanyin.com'
   - '+.onccc.com'
+  - '+.once.im'
   - '+.onceai.com'
   - '+.onceoa.com'
   - '+.onche.net'
@@ -43904,6 +43881,7 @@ payload:
   - '+.peixune.com'
   - '+.peixunmatou.com'
   - '+.peixunxue.com'
+  - '+.peiyake.com'
   - '+.peiyin.net'
   - '+.peiyinge.com'
   - '+.peiyou.com'
@@ -43948,7 +43926,6 @@ payload:
   - '+.peoplerail.com'
   - '+.peopleyuqing.com'
   - '+.pepcn.com'
-  - '+.pepprpvc.vip'
   - '+.pepresource.com'
   - '+.perfect-input.com'
   - '+.perfect-is-shit.com'
@@ -47511,7 +47488,6 @@ payload:
   - '+.rundejy.com'
   - '+.rundongex.com'
   - '+.runexception.com'
-  - '+.runforrun.com'
   - '+.runfox.com'
   - '+.runhe.org'
   - '+.runhuayou.biz'
@@ -48487,7 +48463,6 @@ payload:
   - '+.sf-pay.com'
   - '+.sf-saas.com'
   - '+.sf-zs.net'
-  - '+.sf.gg'
   - '+.sf007.com'
   - '+.sf024.com'
   - '+.sf6710.com'
@@ -49177,7 +49152,6 @@ payload:
   - '+.shiqutech.com'
   - '+.shirannegar.com'
   - '+.shirleyruby.com'
-  - '+.shirleyyean.com'
   - '+.shishagame.com'
   - '+.shishangfengyun.com'
   - '+.shishike.com'
@@ -49608,6 +49582,7 @@ payload:
   - '+.shunwang.com'
   - '+.shuo6.com'
   - '+.shuo66.com'
+  - '+.shuoas.com'
   - '+.shuoba.org'
   - '+.shuobao.com'
   - '+.shuobofootball.xyz'
@@ -49676,7 +49651,6 @@ payload:
   - '+.shwyky.net'
   - '+.shxb.net'
   - '+.shxbe.com'
-  - '+.shxf.net'
   - '+.shxhgzf.com'
   - '+.shxiaoran.com'
   - '+.shxibeiquanshe.com'
@@ -53567,7 +53541,6 @@ payload:
   - '+.tngcjx.com'
   - '+.tnjyfc.com'
   - '+.tnkjmec.com'
-  - '+.tnmb.org'
   - '+.tntdown.com'
   - '+.to-future.net'
   - '+.to4f.com'
@@ -56730,7 +56703,6 @@ payload:
   - '+.wdw6.com'
   - '+.wdw88.com'
   - '+.wdxmzy.com'
-  - '+.wdxsk.com'
   - '+.wdxtub.com'
   - '+.wdy33.com'
   - '+.wdy44.com'
@@ -59015,7 +58987,6 @@ payload:
   - '+.wzfg.com'
   - '+.wzfou.com'
   - '+.wzfw.ltd'
-  - '+.wzhan.net'
   - '+.wzhealth.com'
   - '+.wzhekou.com'
   - '+.wzhouhui.com'
@@ -61657,7 +61628,6 @@ payload:
   - '+.xzlogo.com'
   - '+.xzlres.com'
   - '+.xzltzc.com'
-  - '+.xzlyt.com'
   - '+.xzm56.com'
   - '+.xzn56.com'
   - '+.xzoo.org'
@@ -64500,7 +64470,6 @@ payload:
   - '+.yxlink.com'
   - '+.yxlmdl.net'
   - '+.yxm.com'
-  - '+.yxmarkets.com'
   - '+.yxmspx.com'
   - '+.yxn.fun'
   - '+.yxool.com'
