--- a/directbak.yaml
+++ b/directbak.yaml
@@ -303,7 +303,6 @@ payload:
   - '+.0314.online'
   - '+.0316.cc'
   - '+.031v.com'
-  - '+.032069.com'
   - '+.0328.com'
   - '+.033033.com'
   - '+.0335e.com'
@@ -1495,7 +1494,6 @@ payload:
   - '+.168dc.com'
   - '+.168dns.com'
   - '+.168f.info'
-  - '+.168g.com'
   - '+.168hs.com'
   - '+.168job.com'
   - '+.168kk.com'
@@ -1648,6 +1646,7 @@ payload:
   - '+.17daili.com'
   - '+.17dao.com'
   - '+.17dap.com'
+  - '+.17dawan.com'
   - '+.17dm.com'
   - '+.17doubao.com'
   - '+.17dp.com'
@@ -2460,7 +2459,6 @@ payload:
   - '+.25863.com'
   - '+.2588.tv'
   - '+.25892.com'
-  - '+.258c31.com'
   - '+.258ch.com'
   - '+.258fuwu.com'
   - '+.258jituan.com'
@@ -3107,6 +3105,7 @@ payload:
   - '+.360sides.com'
   - '+.360sok.com'
   - '+.360stamp.com'
+  - '+.360tong.net'
   - '+.360top.com'
   - '+.360totalsecurity.com'
   - '+.360tpcdn.com'
@@ -4192,7 +4191,6 @@ payload:
   - '+.51haojob.com'
   - '+.51hcb.com'
   - '+.51hchc.com'
-  - '+.51hcie.com'
   - '+.51hcw.com'
   - '+.51hei.com'
   - '+.51hejia.com'
@@ -4220,6 +4218,8 @@ payload:
   - '+.51img2.com'
   - '+.51img3.com'
   - '+.51img5.com'
+  - '+.51img6.com'
+  - '+.51img7.com'
   - '+.51imo.com'
   - '+.51ios.net'
   - '+.51itapp.com'
@@ -4631,6 +4631,7 @@ payload:
   - '+.523us.com'
   - '+.525.life'
   - '+.5251.net'
+  - '+.5251yx.com'
   - '+.5252e.com'
   - '+.5253.com'
   - '+.5254.com'
@@ -5029,7 +5030,6 @@ payload:
   - '+.5669.com'
   - '+.566job.com'
   - '+.5676.com'
-  - '+.5678.net'
   - '+.5678la.com'
   - '+.567idc.com'
   - '+.567j.xyz'
@@ -7380,7 +7380,6 @@ payload:
   - '+.980cje.com'
   - '+.98158.com'
   - '+.9823df.com'
-  - '+.9831.com'
   - '+.984g.com'
   - '+.985.so'
   - '+.98523.com'
@@ -7407,6 +7406,7 @@ payload:
   - '+.98one.com'
   - '+.98t.net'
   - '+.98tang.com'
+  - '+.98tuch.net'
   - '+.98znz.com'
   - '+.99-ss.com'
   - '+.99.com'
@@ -8125,7 +8125,6 @@ payload:
   - '+.agalwood.net'
   - '+.agamepower.com'
   - '+.agcloudcs.com'
-  - '+.agctc.com'
   - '+.age-spa.com'
   - '+.age.tv'
   - '+.age06.com'
@@ -8211,6 +8210,7 @@ payload:
   - '+.ahlib.com'
   - '+.ahlife.com'
   - '+.ahljnews.com'
+  - '+.ahlsm1.com'
   - '+.ahmayun.com'
   - '+.ahmky.com'
   - '+.ahmup.com'
@@ -9275,7 +9275,6 @@ payload:
   - '+.anzogame.com'
   - '+.anzow.com'
   - '+.ao-hua.com'
-  - '+.aoaiao.com'
   - '+.aoao365.com'
   - '+.aoaob.com'
   - '+.aoapp.com'
@@ -10070,7 +10069,6 @@ payload:
   - '+.b2bneican.com'
   - '+.b2bvip.com'
   - '+.b2bvip.net'
-  - '+.b2c-seo.com'
   - '+.b2cedu.com'
   - '+.b2q.com'
   - '+.b355.cc'
@@ -11078,7 +11076,6 @@ payload:
   - '+.berlinix.com'
   - '+.berqin.com'
   - '+.berrl.com'
-  - '+.berrycn.com'
   - '+.berrydigi.com'
   - '+.berryol.com'
   - '+.berui.com'
@@ -11494,6 +11491,7 @@ payload:
   - '+.biqudu.net'
   - '+.biqudu.tv'
   - '+.biqufu.com'
+  - '+.biquge.biz'
   - '+.biquge.info'
   - '+.biquge.la'
   - '+.biquge.lu'
@@ -11592,7 +11590,6 @@ payload:
   - '+.bitscn.net'
   - '+.bitsde.com'
   - '+.bitse.com'
-  - '+.bitshuo.com'
   - '+.bitsqa.com'
   - '+.bitu360.com'
   - '+.bitvh.com'
@@ -11977,7 +11974,6 @@ payload:
   - '+.blackeep.com'
   - '+.blackh4t.org'
   - '+.blackholeskins.com'
-  - '+.blackist.org'
   - '+.blackmailedslave.com'
   - '+.blackshark.com'
   - '+.blackshow.me'
@@ -12711,8 +12707,10 @@ payload:
   - '+.bxwx.org'
   - '+.bxwx.tv'
   - '+.bxwx.us'
+  - '+.bxwx11.com'
   - '+.bxwx520.com'
   - '+.bxwx99.com'
+  - '+.bxwxorg.com'
   - '+.bxxy.com'
   - '+.bxynzz.com'
   - '+.bxyuer.com'
@@ -13654,7 +13652,6 @@ payload:
   - '+.cdlfvip.com'
   - '+.cdlgame.com'
   - '+.cdlinux.net'
-  - '+.cdlkzb.com'
   - '+.cdlxqn.com'
   - '+.cdmcaac.com'
   - '+.cdmfund.org'
@@ -15615,7 +15612,6 @@ payload:
   - '+.cidiancn.com'
   - '+.cidianwang.com'
   - '+.cidschina.com'
-  - '+.cidugushi.com'
   - '+.ciec-expo.com'
   - '+.ciect.com'
   - '+.cieet.com'
@@ -15629,7 +15625,6 @@ payload:
   - '+.cifoo.com'
   - '+.ciftis.org'
   - '+.cigarambassador.com'
-  - '+.cigbiexpo.com'
   - '+.cignacmb.com'
   - '+.cihai123.com'
   - '+.cihexpo.com'
@@ -16090,7 +16085,6 @@ payload:
   - '+.cn-zhentai.com'
   - '+.cn.bing.com'
   - '+.cn.bing.net'
-  - '+.cn.img.stb.s-msn.com'
   - '+.cn.msi.com'
   - '+.cn.net'
   - '+.cn.pandora.net'
@@ -18557,7 +18551,6 @@ payload:
   - '+.dazijia.com'
   - '+.dazpin.com'
   - '+.daztoutiao.com'
-  - '+.dazu666.com'
   - '+.dazui.com'
   - '+.db-cache.com'
   - '+.db-nw.com'
@@ -19038,7 +19031,6 @@ payload:
   - '+.dgzj.com'
   - '+.dgzsgjg.com'
   - '+.dgzz1.com'
-  - '+.dgzzm.com'
   - '+.dh.cx'
   - '+.dh01.com'
   - '+.dh0580.com'
@@ -20819,7 +20811,6 @@ payload:
   - '+.eachnet.com'
   - '+.eachsee.com'
   - '+.eaeb.com'
-  - '+.eaes-seari.com'
   - '+.eafifaonline2.com'
   - '+.eaglexiang.org'
   - '+.eahui.com'
@@ -23048,7 +23039,6 @@ payload:
   - '+.firemail.wang'
   - '+.firetry.com'
   - '+.firhq.com'
-  - '+.firoyang.org'
   - '+.firshort.com'
   - '+.firstdrs.com'
   - '+.firstfood-cn.com'
@@ -23237,7 +23227,6 @@ payload:
   - '+.flyacat.com'
   - '+.flybridal.com'
   - '+.flyco.com'
-  - '+.flycode.co'
   - '+.flycua.com'
   - '+.flydigi.com'
   - '+.flyenglish.com'
@@ -24415,7 +24404,6 @@ payload:
   - '+.gdzbs.com'
   - '+.gdzhlh.com'
   - '+.gdzhongshan.com'
-  - '+.gdzj8.com'
   - '+.gdzp.org'
   - '+.gdzs2018.cc'
   - '+.gdzs2018.vip'
@@ -25863,7 +25851,6 @@ payload:
   - '+.guzaosf.com'
   - '+.guzhangting.com'
   - '+.guzhifengds.com'
-  - '+.guzhiwang.com'
   - '+.guziyy.com'
   - '+.gvacdn.com'
   - '+.gvi-tech.com'
@@ -26409,7 +26396,6 @@ payload:
   - '+.haishui.cc'
   - '+.haitaibrowser.com'
   - '+.haitaichina.com'
-  - '+.haitang123.vip'
   - '+.haitao.co'
   - '+.haitao.com'
   - '+.haitao369.com'
@@ -27111,7 +27097,6 @@ payload:
   - '+.hbryzx.net'
   - '+.hbrzkj.com'
   - '+.hbs-nd.com'
-  - '+.hbsantak.com'
   - '+.hbsccloud.com'
   - '+.hbsdenterprise.com'
   - '+.hbsem.com'
@@ -28652,7 +28637,6 @@ payload:
   - '+.hrbesd.com'
   - '+.hrbmama.com'
   - '+.hrbmilan.com'
-  - '+.hrbpay.com'
   - '+.hrbrc.com'
   - '+.hrbslh.com'
   - '+.hrbswx.com'
@@ -30471,7 +30455,6 @@ payload:
   - '+.ifahao.com'
   - '+.ifanbei.com'
   - '+.ifangarden.com'
-  - '+.ifanggo.com'
   - '+.ifangka.com'
   - '+.ifanjian.net'
   - '+.ifanr.com'
@@ -30632,7 +30615,6 @@ payload:
   - '+.ihlnews.com'
   - '+.ihomefnt.com'
   - '+.ihomesoft.net'
-  - '+.ihoms.com'
   - '+.ihongma.com'
   - '+.ihongpan.com'
   - '+.ihongqiqu.com'
@@ -31123,7 +31105,6 @@ payload:
   - '+.inforguard.net'
   - '+.informrack.com'
   - '+.inforsec.org'
-  - '+.infoshow.net'
   - '+.infosoft.cc'
   - '+.infovc.com'
   - '+.infowuxi.com'
@@ -31337,7 +31318,6 @@ payload:
   - '+.ipchaxun.com'
   - '+.ipchina.com'
   - '+.ipcmen.com'
-  - '+.ipcool.info'
   - '+.ipcorecatalog.com'
   - '+.ipcwifi.com'
   - '+.ipcxz.com'
@@ -32630,6 +32610,7 @@ payload:
   - '+.jianlixiu.com'
   - '+.jianloubao.com'
   - '+.jianluote.net'
+  - '+.jianmu.run'
   - '+.jianniang.com'
   - '+.jianpage.com'
   - '+.jianpaimeiye.com'
@@ -33150,6 +33131,7 @@ payload:
   - '+.jinzheled.com'
   - '+.jinzhidagl.com'
   - '+.jinzhoubank.com'
+  - '+.jinzhouwp.com'
   - '+.jinzhucaifu.com'
   - '+.jinzhuguo.com'
   - '+.jinzjy.com'
@@ -33499,7 +33481,6 @@ payload:
   - '+.jlwlyx.com'
   - '+.jlwubi.com'
   - '+.jlxfw.com'
-  - '+.jlyes.com'
   - '+.jlytjx.com'
   - '+.jlzkb.com'
   - '+.jlzsoft.com'
@@ -33565,6 +33546,7 @@ payload:
   - '+.jnhouse.com'
   - '+.jnjbrother.com'
   - '+.jnjj.com'
+  - '+.jnjjyq.com'
   - '+.jnjylh.com'
   - '+.jnkason.com'
   - '+.jnky.com'
@@ -34325,6 +34307,7 @@ payload:
   - '+.jwyun.net'
   - '+.jx-bank.com'
   - '+.jx-nc.com'
+  - '+.jx.la'
   - '+.jx09.com'
   - '+.jx188.com'
   - '+.jx3mogu.com'
@@ -35548,7 +35531,6 @@ payload:
   - '+.kplanet.vip'
   - '+.kpqtw.com'
   - '+.kprepublic.com'
-  - '+.kpsfloor.com'
   - '+.kpzip.com'
   - '+.kpzip.net'
   - '+.kpzs.com'
@@ -35771,6 +35753,7 @@ payload:
   - '+.kuaiyoujia.com'
   - '+.kuaiyouxi.com'
   - '+.kuaiyu.com'
+  - '+.kuaiyunbd.com'
   - '+.kuaiyunds.com'
   - '+.kuaizhan.com'
   - '+.kuaizhang.com'
@@ -35969,7 +35952,6 @@ payload:
   - '+.kwin.wang'
   - '+.kwin.xyz'
   - '+.kwkf.com'
-  - '+.kwting.com'
   - '+.kwtzn.com'
   - '+.kwx.gd'
   - '+.kwxjh.net'
@@ -36344,7 +36326,6 @@ payload:
   - '+.laogumincj.com'
   - '+.laohanzong.com'
   - '+.laohanzong1.com'
-  - '+.laohe360.net'
   - '+.laohu.com'
   - '+.laohu8.com'
   - '+.laohuabao.com'
@@ -38472,7 +38453,6 @@ payload:
   - '+.luxtarget.com'
   - '+.luxuqing.com'
   - '+.luxury-theme.com'
-  - '+.luyady.com'
   - '+.luyanghui.com'
   - '+.luyewooden.com'
   - '+.luyinla.com'
@@ -38944,7 +38924,6 @@ payload:
   - '+.maiquan.me'
   - '+.mairoot.com'
   - '+.mairuan.com'
-  - '+.mairuier.com'
   - '+.maiscrm.com'
   - '+.maishashop.com'
   - '+.maishebei.com'
@@ -43092,6 +43071,7 @@ payload:
   - '+.openedv.com'
   - '+.openerp.hk'
   - '+.openeuler.org'
+  - '+.opengcc.org'
   - '+.opengslb.com'
   - '+.openinstall.io'
   - '+.openke.net'
@@ -43162,7 +43142,6 @@ payload:
   - '+.oqss.com'
   - '+.or-sun.com'
   - '+.oracledatabase12g.com'
-  - '+.oracleoaec.net'
   - '+.oradbca.com'
   - '+.oraev.com'
   - '+.oralpractice.com'
@@ -43257,6 +43236,7 @@ payload:
   - '+.oss.link'
   - '+.oss.so'
   - '+.osschina.com'
+  - '+.ossrs.net'
   - '+.ossxp.com'
   - '+.ostools.net'
   - '+.osvlabs.com'
@@ -43489,7 +43469,6 @@ payload:
   - '+.pai-hang-bang.com'
   - '+.paibanxia.com'
   - '+.paichen.net'
-  - '+.paidai.com'
   - '+.paidai.org'
   - '+.paidanzi.com'
   - '+.paidui.com'
@@ -43971,7 +43950,6 @@ payload:
   - '+.pgl-world.com'
   - '+.pglstatp-toutiao-b.com'
   - '+.pglstatp-toutiao.com'
-  - '+.pgnan.com'
   - '+.pgsql.tech'
   - '+.pgsqldb.com'
   - '+.pgsqldb.org'
@@ -44026,13 +44004,11 @@ payload:
   - '+.photoyunnan.com'
   - '+.photozoomchina.com'
   - '+.phouses.com'
-  - '+.php-master.com'
   - '+.php-note.com'
   - '+.php-oa.com'
   - '+.php-z.com'
   - '+.php168.com'
   - '+.php2.cc'
-  - '+.php230.com'
   - '+.php318.com'
   - '+.php7.site'
   - '+.phpbbchina.com'
@@ -44559,7 +44535,6 @@ payload:
   - '+.positivisten.com'
   - '+.posn.net'
   - '+.post183.net'
-  - '+.postcha.com'
   - '+.posterlabs.com'
   - '+.postgres.fun'
   - '+.postgresqlchina.com'
@@ -44762,6 +44737,7 @@ payload:
   - '+.prts.wiki'
   - '+.przhushou.com'
   - '+.przwt.com'
+  - '+.ps123.net'
   - '+.ps265.com'
   - '+.ps314.com'
   - '+.psbc.com'
@@ -44814,6 +44790,7 @@ payload:
   - '+.ptorch.com'
   - '+.ptotour.com'
   - '+.ptpcp.com'
+  - '+.ptshare.org'
   - '+.ptteng.com'
   - '+.ptweixin.com'
   - '+.ptxz.com'
@@ -47505,7 +47482,6 @@ payload:
   - '+.runpho.com'
   - '+.runsisi.com'
   - '+.runsky.com'
-  - '+.runtianhotel.com'
   - '+.runtime.pw'
   - '+.runtimeedu.com'
   - '+.runtimewh.com'
@@ -48874,7 +48850,6 @@ payload:
   - '+.sheluyou.com'
   - '+.shelwee.com'
   - '+.shen-hua.com'
-  - '+.shen1shen.com'
   - '+.shenanhui.com'
   - '+.shenbao.org'
   - '+.shenbiedu.com'
@@ -49742,7 +49717,6 @@ payload:
   - '+.sigmoblive.com'
   - '+.sigu.cc'
   - '+.sigu.me'
-  - '+.siguady.com'
   - '+.sigujx.com'
   - '+.siguoya.name'
   - '+.sigure.xyz'
@@ -52337,7 +52311,6 @@ payload:
   - '+.tangyingkang.com'
   - '+.tangzhekan2.net'
   - '+.tangzhuan666.com'
-  - '+.tangzongchao.com'
   - '+.tanhaibo.net'
   - '+.tanho.com'
   - '+.tanhu.net'
@@ -52923,7 +52896,6 @@ payload:
   - '+.tgshiguan.com'
   - '+.tgyoo.com'
   - '+.tgyun.cc'
-  - '+.th-gas.com'
   - '+.th123.com'
   - '+.th38.com'
   - '+.thaiyuehealth.com'
@@ -53748,7 +53720,6 @@ payload:
   - '+.topitme.com'
   - '+.topjoy.com'
   - '+.topjoycloud.com'
-  - '+.topjuyi.com'
   - '+.topksw.com'
   - '+.topku.com'
   - '+.toplanit.com'
@@ -53989,7 +53960,6 @@ payload:
   - '+.tripsmc.com'
   - '+.tripvivid.com'
   - '+.tripwirechina.com'
-  - '+.tripzm.com'
   - '+.triring.com'
   - '+.triumbest.net'
   - '+.trjcn.com'
@@ -54020,6 +53990,7 @@ payload:
   - '+.trustasia.com'
   - '+.trustedsign.com'
   - '+.trustexporter.com'
+  - '+.trustie.net'
   - '+.trustkernel.com'
   - '+.trustlife.com'
   - '+.trustmover.com'
@@ -55017,7 +54988,6 @@ payload:
   - '+.umenglog.com'
   - '+.umetrip.com'
   - '+.umi.im'
-  - '+.umiall.com'
   - '+.umihome.com'
   - '+.umilu.com'
   - '+.umindex.com'
@@ -55120,7 +55090,6 @@ payload:
   - '+.unixhot.com'
   - '+.unixidc.com'
   - '+.unizai.com'
-  - '+.unjeep.com'
   - '+.unjmz.com'
   - '+.unjs.com'
   - '+.unlimax.com'
@@ -56141,6 +56110,7 @@ payload:
   - '+.vxiaocheng.com'
   - '+.vxiaoxin.com'
   - '+.vxinyou.com'
+  - '+.vxmpw.com'
   - '+.vxplo.com'
   - '+.vxposed.com'
   - '+.vxsnk.com'
@@ -56680,7 +56650,6 @@ payload:
   - '+.wdfangyi.com'
   - '+.wdfxw.net'
   - '+.wdghy.com'
-  - '+.wdh518.com'
   - '+.wdinter.com'
   - '+.wdjimg.com'
   - '+.wdjky.com'
@@ -57079,7 +57048,6 @@ payload:
   - '+.weixinqn.com'
   - '+.weixinquanzi.com'
   - '+.weixinrensheng.com'
-  - '+.weixinso.com'
   - '+.weixinsxy.com'
   - '+.weixinyunduan.com'
   - '+.weixistyle.com'
@@ -58804,7 +58772,6 @@ payload:
   - '+.www.gov.mo'
   - '+.www.htc.com'
   - '+.www.htcsense.com'
-  - '+.www.kaspersky.com'
   - '+.www.microsoft.com'
   - '+.www.nike.com'
   - '+.www.pandora.net'
@@ -60147,6 +60114,7 @@ payload:
   - '+.xinbaopos.com'
   - '+.xinbear.com'
   - '+.xinbqg.com'
+  - '+.xinbxwx.com'
   - '+.xincache.com'
   - '+.xincai.com'
   - '+.xincaiguan.com'
@@ -60669,6 +60637,7 @@ payload:
   - '+.xjrb.net'
   - '+.xjrmyy.com'
   - '+.xjshift.com'
+  - '+.xjstnyly.com'
   - '+.xjtour.com'
   - '+.xjtsnews.com'
   - '+.xjtuccjsj.com'
@@ -60941,6 +60910,7 @@ payload:
   - '+.xpc420.com'
   - '+.xpccdn.com'
   - '+.xpcha.com'
+  - '+.xpdf.net'
   - '+.xpjedu.com'
   - '+.xpjj.net'
   - '+.xpjm.net'
@@ -62210,6 +62180,7 @@ payload:
   - '+.yezdm.com'
   - '+.yezhuwq.com'
   - '+.yezhuwuyou.com'
+  - '+.yezicc.com'
   - '+.yeziting.com'
   - '+.yezixigame.com'
   - '+.yfbzb.com'
@@ -62684,7 +62655,6 @@ payload:
   - '+.yinxunbiao.com'
   - '+.yinyue7.com'
   - '+.yinyuegf.com'
-  - '+.yinyueke.net'
   - '+.yinyuemeitu.com'
   - '+.yinyuetai.com'
   - '+.yinyueyouxi.com'
@@ -62843,6 +62813,7 @@ payload:
   - '+.yixinu.com'
   - '+.yixinxin.com'
   - '+.yixiu08.com'
+  - '+.yixiubx.com'
   - '+.yixiuxueyuan.com'
   - '+.yixuan.net'
   - '+.yixue68.com'
@@ -63921,7 +63892,6 @@ payload:
   - '+.yueimg.com'
   - '+.yueji.com'
   - '+.yuejianzun.xyz'
-  - '+.yuejiayan.com'
   - '+.yuejiewangluo.com'
   - '+.yuejuanbao.com'
   - '+.yuekenet.com'
@@ -63986,7 +63956,6 @@ payload:
   - '+.yuguozw.com'
   - '+.yuheii.com'
   - '+.yuheng.tech'
-  - '+.yuhongsl.com'
   - '+.yuhou.com'
   - '+.yuhuijob.com'
   - '+.yuiapi.com'
@@ -65193,7 +65162,6 @@ payload:
   - '+.zgyhys.org'
   - '+.zgyingtong.com'
   - '+.zgyinpin.com'
-  - '+.zgyizw.com'
   - '+.zgylqy.com'
   - '+.zgyongxin.com'
   - '+.zgys.net'
@@ -65957,6 +65925,7 @@ payload:
   - '+.zhoulaoshi.club'
   - '+.zhoulingjie.com'
   - '+.zhoushangren.com'
+  - '+.zhoushengfe.com'
   - '+.zhouxiao.me'
   - '+.zhouxingchi.info'
   - '+.zhouxuanyu.com'
@@ -66626,7 +66595,6 @@ payload:
   - '+.zlcool.com'
   - '+.zlfedu.com'
   - '+.zlfind.com'
-  - '+.zlfls.com'
   - '+.zlg.com'
   - '+.zlgmcu.com'
   - '+.zlgpy.com'
@@ -67100,7 +67068,6 @@ payload:
   - '+.zuixu.com'
   - '+.zuixue.com'
   - '+.zuiyou.com'
-  - '+.zuiyougou.com'
   - '+.zuiyouxi.com'
   - '+.zuiyouzhi.com'
   - '+.zujuan.com'
@@ -67292,7 +67259,6 @@ payload:
   - '+.zxxww.com'
   - '+.zxxxkj.com'
   - '+.zxzhijia.com'
-  - '+.zxzj.fun'
   - '+.zxzj.me'
   - '+.zxzlf.com'
   - '+.zxzyl.com'
