--- a/directbak.yaml
+++ b/directbak.yaml
@@ -765,7 +765,6 @@ payload:
   - '+.1000eb.net'
   - '+.1000fr.net'
   - '+.1000fun.com'
-  - '+.1000kan.cc'
   - '+.1000phone.com'
   - '+.1000phone.net'
   - '+.1000plan.org'
@@ -2265,8 +2264,6 @@ payload:
   - '+.221316.com'
   - '+.221400job.com'
   - '+.22145.com'
-  - '+.221532.com'
-  - '+.221576.com'
   - '+.2217.com'
   - '+.221700.com'
   - '+.222.com'
@@ -3802,6 +3799,7 @@ payload:
   - '+.497.com'
   - '+.498.net'
   - '+.499-img.com'
+  - '+.499youxi.com'
   - '+.49app.com'
   - '+.49pic.com'
   - '+.49wanwan.com'
@@ -5998,6 +5996,7 @@ payload:
   - '+.7384tv.com'
   - '+.7399t.com'
   - '+.73bc.com'
+  - '+.73bt.com'
   - '+.73card.com'
   - '+.73zw.com'
   - '+.74.com'
@@ -6777,6 +6776,7 @@ payload:
   - '+.8ms.xyz'
   - '+.8mu8.com'
   - '+.8multimill.com'
+  - '+.8n2.com'
   - '+.8n6n.com'
   - '+.8njy.com'
   - '+.8o9o.com'
@@ -6878,6 +6878,7 @@ payload:
   - '+.9158ads.com'
   - '+.9158h5.com'
   - '+.915c.com'
+  - '+.9166yx.com'
   - '+.916m.com'
   - '+.917.com'
   - '+.9170.com'
@@ -7535,7 +7536,6 @@ payload:
   - '+.9air.com'
   - '+.9aoduo.com'
   - '+.9aola.com'
-  - '+.9apay.com'
   - '+.9beike.com'
   - '+.9bianli.com'
   - '+.9c9c.cc'
@@ -7575,6 +7575,7 @@ payload:
   - '+.9fpuhui.com'
   - '+.9fs.com'
   - '+.9g.com'
+  - '+.9g8g.com'
   - '+.9gty.net'
   - '+.9hcom.com'
   - '+.9he.com'
@@ -8363,6 +8364,7 @@ payload:
   - '+.aihecong.com'
   - '+.aihehuo.com'
   - '+.aihelp.net'
+  - '+.aihoge.com'
   - '+.aihuahua.net'
   - '+.aihuajia.com'
   - '+.aihuaju.com'
@@ -9755,6 +9757,7 @@ payload:
   - '+.assets-global.viveport.com'
   - '+.assets.analog.com'
   - '+.assets.uxengine.net'
+  - '+.assets.volvocars.com'
   - '+.assrt.net'
   - '+.astbbs.com'
   - '+.astestech.com'
@@ -11096,6 +11099,7 @@ payload:
   - '+.bestcake.com'
   - '+.bestcdn.vip'
   - '+.bestcem.com'
+  - '+.bestcovered.com'
   - '+.bestdjb.com'
   - '+.bestdo.com'
   - '+.bestdvd.com.tw'
@@ -11701,7 +11705,6 @@ payload:
   - '+.bjceis.com'
   - '+.bjcfzx.com'
   - '+.bjcgtrain.com'
-  - '+.bjchild.com'
   - '+.bjcifco.net'
   - '+.bjckkj.com'
   - '+.bjcls.net'
@@ -11973,7 +11976,6 @@ payload:
   - '+.blackdir.com'
   - '+.blackeep.com'
   - '+.blackh4t.org'
-  - '+.blackholeskins.com'
   - '+.blackmailedslave.com'
   - '+.blackshark.com'
   - '+.blackshow.me'
@@ -13040,7 +13042,6 @@ payload:
   - '+.cainiao.com'
   - '+.cainiaodoc.com'
   - '+.cainiaojiaocheng.com'
-  - '+.cainiaolc.com'
   - '+.cainiaoqidian.com'
   - '+.cainiaoxueyuan.com'
   - '+.cainu.net'
@@ -13149,7 +13150,6 @@ payload:
   - '+.cansine.com'
   - '+.cansuan.com'
   - '+.cantoge.com'
-  - '+.canukiss.me'
   - '+.canvasf.com'
   - '+.canway.net'
   - '+.canwayit.com'
@@ -13987,7 +13987,6 @@ payload:
   - '+.cfxydefsyy.com'
   - '+.cfxyfsyy.com'
   - '+.cfxyjy.com'
-  - '+.cfzb.org'
   - '+.cfzq.com'
   - '+.cg-cdn.net'
   - '+.cg-orz.com'
@@ -14449,6 +14448,7 @@ payload:
   - '+.chenplus.com'
   - '+.chenpot.com'
   - '+.chenruixuan.com'
+  - '+.chenrunjinshu.com'
   - '+.chenshipin.com'
   - '+.chensonglin.net'
   - '+.chenty.com'
@@ -14513,6 +14513,7 @@ payload:
   - '+.chezhanri.com'
   - '+.chezhibao.com'
   - '+.chezhu1.com'
+  - '+.chezhubidu.com'
   - '+.chezhuzhinan.com'
   - '+.chezizhu.com'
   - '+.chgcis.com'
@@ -17025,6 +17026,7 @@ payload:
   - '+.corpize.com'
   - '+.corpring.com'
   - '+.corpus4u.org'
+  - '+.cortexfx.bnpparibas.com'
   - '+.cos-show.com'
   - '+.cosco.com'
   - '+.coscon.com'
@@ -17647,6 +17649,7 @@ payload:
   - '+.cu321.com'
   - '+.cuaa.net'
   - '+.cuan.la'
+  - '+.cuanhuang.com'
   - '+.cuantianhou.net'
   - '+.cuav.net'
   - '+.cubead.com'
@@ -21068,6 +21071,7 @@ payload:
   - '+.ecshop123.com'
   - '+.ecsits.com'
   - '+.ecsponline.com'
+  - '+.ecsxs.com'
   - '+.ecuc123.net'
   - '+.ecustmde.com'
   - '+.ecvv.com'
@@ -22922,7 +22926,6 @@ payload:
   - '+.fghi34.com'
   - '+.fgidna.com'
   - '+.fgkj.cc'
-  - '+.fgmgb888.com'
   - '+.fgo.wiki'
   - '+.fgowiki.com'
   - '+.fgvisa.net'
@@ -23367,7 +23370,6 @@ payload:
   - '+.fornature.com'
   - '+.forrealbio.com'
   - '+.forrerri.com'
-  - '+.forsakenyc.xyz'
   - '+.forsigner.com'
   - '+.forsou.com'
   - '+.forthxu.com'
@@ -23400,6 +23402,7 @@ payload:
   - '+.fototuan.com'
   - '+.foufu.com'
   - '+.fouleide.com'
+  - '+.foumeng.com'
   - '+.founder.com'
   - '+.founderbn.com'
   - '+.foundercentury.com'
@@ -23788,7 +23791,6 @@ payload:
   - '+.fx678.com'
   - '+.fx678.net'
   - '+.fx678red.com'
-  - '+.fx968.com'
   - '+.fxbaogao.com'
   - '+.fxcccbbs.com'
   - '+.fxclass.net'
@@ -23827,6 +23829,7 @@ payload:
   - '+.fy-team.com'
   - '+.fy027.com'
   - '+.fy169.net'
+  - '+.fy35.com'
   - '+.fy558.com'
   - '+.fy65.com'
   - '+.fy98.com'
@@ -25324,7 +25327,6 @@ payload:
   - '+.gpxygpfx.com'
   - '+.gpxz.com'
   - '+.gpzbs.com'
-  - '+.gqak.com'
   - '+.gqgkj.com'
   - '+.gqhmt.com'
   - '+.gqjd.net'
@@ -25998,7 +26000,6 @@ payload:
   - '+.gz-gz.com'
   - '+.gz-lodihair.com'
   - '+.gz-notary.com'
-  - '+.gz-oe.com'
   - '+.gz-station.com'
   - '+.gz-tylx.com'
   - '+.gz007.net'
@@ -27057,7 +27058,6 @@ payload:
   - '+.hbla.net'
   - '+.hblady.com'
   - '+.hblccy.com'
-  - '+.hblijiehb.com'
   - '+.hbliti.com'
   - '+.hblszq.com'
   - '+.hbltzb.com'
@@ -27276,7 +27276,6 @@ payload:
   - '+.hdsx36hb.com'
   - '+.hdsx39hb.com'
   - '+.hdtgtm.com'
-  - '+.hdthjy.com'
   - '+.hdtmedia.com'
   - '+.hduofen.com'
   - '+.hdurl.me'
@@ -28141,7 +28140,6 @@ payload:
   - '+.hncloud.com'
   - '+.hncourt.org'
   - '+.hncreate.com'
-  - '+.hncsdayu.com'
   - '+.hncsmjzs.com'
   - '+.hncsmtr.com'
   - '+.hncsvod.com'
@@ -29636,7 +29634,6 @@ payload:
   - '+.hxsd.com'
   - '+.hxsd.tv'
   - '+.hxsec.com'
-  - '+.hxshuizu.com'
   - '+.hxshx.com'
   - '+.hxsme.org'
   - '+.hxt-semitech.com'
@@ -29843,6 +29840,7 @@ payload:
   - '+.hzwxq.com'
   - '+.hzwyh.com'
   - '+.hzxhymc.com'
+  - '+.hzxiaobao.com'
   - '+.hzxiyuege.com'
   - '+.hzxsjgxx.com'
   - '+.hzxyns.com'
@@ -30927,6 +30925,7 @@ payload:
   - '+.imgsina.com'
   - '+.imgtu.com'
   - '+.imgu.cc'
+  - '+.imgurl.org'
   - '+.imhan.com'
   - '+.imhanjie.com'
   - '+.imhaowa.com'
@@ -31062,6 +31061,7 @@ payload:
   - '+.indaboom.com'
   - '+.indexedu.com'
   - '+.indexedu.net'
+  - '+.indexmob.com'
   - '+.indiancn.com'
   - '+.indics.com'
   - '+.indiehacker.im'
@@ -31226,6 +31226,7 @@ payload:
   - '+.intwho.com'
   - '+.intwk.com'
   - '+.inuobi.com'
+  - '+.inuu6.com'
   - '+.inveno.com'
   - '+.inverter.so'
   - '+.invescogreatwall.com'
@@ -32855,6 +32856,7 @@ payload:
   - '+.jikejiazhuang.com'
   - '+.jikejidi.com'
   - '+.jikemac.com'
+  - '+.jikewan.com'
   - '+.jikexiu.com'
   - '+.jikexueyuan.com'
   - '+.jikipedia.com'
@@ -33204,7 +33206,6 @@ payload:
   - '+.jitaqupu.com'
   - '+.jitashe.org'
   - '+.jitavip.com'
-  - '+.jitay.com'
   - '+.jiterzzzz.com'
   - '+.jitiku.com'
   - '+.jitongtianxia.com'
@@ -33769,7 +33770,6 @@ payload:
   - '+.jqskygame.com'
   - '+.jquee.com'
   - '+.jquery123.com'
-  - '+.jqueryajax.com'
   - '+.jqueryfuns.com'
   - '+.jquerywidget.com'
   - '+.jqw.com'
@@ -34835,7 +34835,6 @@ payload:
   - '+.kasora.moe'
   - '+.kasscloud.com'
   - '+.kasumi.club'
-  - '+.katcin.com'
   - '+.katongji.com'
   - '+.katvr.com'
   - '+.katyusha.net'
@@ -36072,7 +36071,6 @@ payload:
   - '+.ladymetro.com'
   - '+.ladystr.com'
   - '+.ladywu.net'
-  - '+.ladyyu.com'
   - '+.lafaso.com'
   - '+.lafhzx.com'
   - '+.lagou.com'
@@ -36295,6 +36293,7 @@ payload:
   - '+.lanzou.com'
   - '+.lanzoug.com'
   - '+.lanzoui.com'
+  - '+.lanzoum.com'
   - '+.lanzoup.com'
   - '+.lanzouq.com'
   - '+.lanzoux.com'
@@ -36935,6 +36934,7 @@ payload:
   - '+.lhs11.com'
   - '+.lhsdad.com'
   - '+.lhsoso.com'
+  - '+.lhsz.xyz'
   - '+.lhtjyy.com'
   - '+.lhtyyt.com'
   - '+.lhwill.com'
@@ -38299,7 +38299,6 @@ payload:
   - '+.luckincoffeecdn.com'
   - '+.lucklnk.com'
   - '+.luckyair.net'
-  - '+.luckycoding.com'
   - '+.luckycoffee.com'
   - '+.luckyjia.com'
   - '+.luckyxp.net'
@@ -38666,6 +38665,7 @@ payload:
   - '+.lysqdx.com'
   - '+.lysqzs.com'
   - '+.lysteel.com'
+  - '+.lysy360.com'
   - '+.lythw.com'
   - '+.lytning.xyz'
   - '+.lytoufang.com'
@@ -40941,7 +40941,6 @@ payload:
   - '+.mt-bbs.com'
   - '+.mt-spirit.com'
   - '+.mt-wire.com'
-  - '+.mt30.com'
   - '+.mtasia.net'
   - '+.mtavip.com'
   - '+.mtblj.com'
@@ -41612,6 +41611,7 @@ payload:
   - '+.nbahero.com'
   - '+.nbahi.com'
   - '+.nbahjx.com'
+  - '+.nbaqmq.com'
   - '+.nbayaobasketballclub.com'
   - '+.nbazww.com'
   - '+.nbbeer.com'
@@ -42206,6 +42206,7 @@ payload:
   - '+.njsjz.com'
   - '+.njskps.com'
   - '+.njsxbw.com'
+  - '+.njsyue.com'
   - '+.njuaplusplus.com'
   - '+.njuftp.org'
   - '+.njupt-sacc.com'
@@ -43355,7 +43356,6 @@ payload:
   - '+.ouyada.com'
   - '+.ouyaoxiazai.com'
   - '+.ouyeel.com'
-  - '+.ouyi.fit'
   - '+.ouyingyimin.com'
   - '+.ouzhougoufang.com'
   - '+.ovalechina.com'
@@ -44915,7 +44915,6 @@ payload:
   - '+.pxtx.com'
   - '+.pxx.io'
   - '+.py-axa.com'
-  - '+.py.com'
   - '+.py1314.com'
   - '+.py168.com'
   - '+.py3study.com'
@@ -45026,7 +45025,6 @@ payload:
   - '+.qccost.com'
   - '+.qccr.com'
   - '+.qccrm.com'
-  - '+.qcdrp.com'
   - '+.qcds.com'
   - '+.qcenglish.com'
   - '+.qcgcj.com'
@@ -47282,7 +47280,6 @@ payload:
   - '+.router.tw'
   - '+.routeryun.com'
   - '+.routewize.com'
-  - '+.routingeye.com'
   - '+.rouwen.net'
   - '+.rouzip.com'
   - '+.rowcan.com'
@@ -48282,6 +48279,7 @@ payload:
   - '+.seersee.com'
   - '+.seeseed.com'
   - '+.seeshentech.com'
+  - '+.seesoso.com'
   - '+.seetao.com'
   - '+.seewellintl.net'
   - '+.seewo.com'
@@ -50580,7 +50578,6 @@ payload:
   - '+.songsgames.com'
   - '+.songshitang.com'
   - '+.songshizhao.com'
-  - '+.songshu.cc'
   - '+.songshudiandian.com'
   - '+.songshuhui.net'
   - '+.songshushuo.com'
@@ -56655,6 +56652,7 @@ payload:
   - '+.wdjky.com'
   - '+.wdjl.net'
   - '+.wdku.net'
+  - '+.wdkud6.com'
   - '+.wdliuxue.com'
   - '+.wdlny.com'
   - '+.wdmcake.com'
@@ -56880,7 +56878,6 @@ payload:
   - '+.weidunewtab.com'
   - '+.weiengift.com'
   - '+.weifang168.com'
-  - '+.weifei.me'
   - '+.weifenghr.com'
   - '+.weifengke.com'
   - '+.weifengou.com'
@@ -57506,7 +57503,6 @@ payload:
   - '+.whjzy.net'
   - '+.whjzyxh.org'
   - '+.whkakaxi.com'
-  - '+.whkangte.com'
   - '+.whkc.com'
   - '+.whkingdom.com'
   - '+.whkjz.com'
@@ -58772,6 +58768,7 @@ payload:
   - '+.www.gov.mo'
   - '+.www.htc.com'
   - '+.www.htcsense.com'
+  - '+.www.ibm.com'
   - '+.www.microsoft.com'
   - '+.www.nike.com'
   - '+.www.pandora.net'
@@ -59906,6 +59903,7 @@ payload:
   - '+.xiaoyayun.com'
   - '+.xiaoyeren.com'
   - '+.xiaoyewuliu.com'
+  - '+.xiaoyezi.com'
   - '+.xiaoyi.com'
   - '+.xiaoyida.com'
   - '+.xiaoyida.net'
@@ -62004,7 +62002,6 @@ payload:
   - '+.ycym.com'
   - '+.ycyui.com'
   - '+.yczihua.com'
-  - '+.yda513.com'
   - '+.ydaobo.com'
   - '+.ydbimg.com'
   - '+.ydc360.com'
@@ -62064,6 +62061,7 @@ payload:
   - '+.yeboyzq.com'
   - '+.yecdn.com'
   - '+.yedingding.com'
+  - '+.yee5.com'
   - '+.yeeaoo.com'
   - '+.yeecall.com'
   - '+.yeecin.com'
@@ -63414,6 +63412,7 @@ payload:
   - '+.youshifu.com'
   - '+.youshikoudai.com'
   - '+.youshixiu.com'
+  - '+.youshop10.com'
   - '+.youshu.cc'
   - '+.youshuba.cc'
   - '+.youshuge.com'
@@ -64035,7 +64034,6 @@ payload:
   - '+.yunbook123.com'
   - '+.yuncai5.com'
   - '+.yuncaijing.com'
-  - '+.yuncaolll.com'
   - '+.yuncdn.bid'
   - '+.yuncdn263.com'
   - '+.yuncdndun.com'
@@ -64161,7 +64159,6 @@ payload:
   - '+.yunos-tv.com'
   - '+.yunos.com'
   - '+.yunpan.com'
-  - '+.yunpankk.com'
   - '+.yunpansou.cc'
   - '+.yunpanx.com'
   - '+.yunpanziyuan.com'
@@ -67267,6 +67264,7 @@ payload:
   - '+.zy2071.com'
   - '+.zy728.com'
   - '+.zyan.cc'
+  - '+.zyautoe.com'
   - '+.zybang.com'
   - '+.zybang1.com'
   - '+.zybird.com'
